--- a/app/globals.css
+++ b/app/globals.css
@@ -33,7 +33,7 @@ body {
 
 @font-face {
   font-family: 'Capriola';
-  src: url('/font/capriola-regular.ttf') format('truetype');
+  src: url('/font/Capriola-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
